tests-integration/fixtures/checking/078_instance_member_missing_constraint/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
show :: forall (@a :: Type). Show (a :: Type) => (a :: Type) -> String
Box :: forall (@a :: Type). (a :: Type) -> Box (a :: Type)

Types
Show :: Type -> Constraint
Box :: Type -> Type

Classes
class forall (a :: Type). Show (a :: Type)
  show :: forall (@a :: Type). Show (a :: Type) => (a :: Type) -> String

Instances
instance forall (t2 :: Type). Show (Box (t2 :: Type))

Roles
Box = [Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Show (t3 :: Type)
  --> 9:1..11:24
  |
9 | instance Show (Box a) where
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~
